--- a/css/windowMenus.css
+++ b/css/windowMenus.css
@@ -7,6 +7,7 @@ menu-item {
 .menuDropdown {
   display: none;
   position: absolute;
+  left:0;
   width: 100px;
   min-height: 18px;
   background-color: #ccb;
@@ -14,11 +15,17 @@ menu-item {
   box-sizing: padding-box;
 }
 
+.entryDivider {
+  position: relative;
+  display: block;
+  border: 1px inset #eed;
+}
+
 .menuItem {
   display: inline-block;
-  height:100%;
-  min-width: 25px;
+  height:18px;
   padding-left: 5px;
+  padding-right: 5px;
 }
 
 .menuEntry {
@@ -28,6 +35,14 @@ menu-item {
   line-height: 18px;
 }
 
+.menuEntry.fade {
+  color: #777;
+}
+
 .menuEntry:hover {
   background-color: #998;
+}
+
+.menuEntry.fade:hover {
+  background-color: initial;
 }
