--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ body {
   font-weight: lighter;
   width:100%;
   height:100%;
+  user-select: none;
+  cursor: url(../img/mouse.png), pointer;
 }
 
 #background {
@@ -46,6 +48,7 @@ body {
   top:0;
   background-color: #369;
   overflow: hidden;
+  user-select: none;
 }
 
 #desktop {
@@ -55,37 +58,7 @@ body {
   top:0;
   width:100%;
   height:100%;
-}
-
-eye-con {
-  position:absolute;
-  text-align: center;
-  height: 60px;
-  width:70px;
-  border-radius: 1px;
-  box-sizing: content-box;
-}
-
-.iconSelect {
-  border: 1px dotted;
-  border-color: rgba(255, 255, 255, 0.75);
-  background-color: rgba(255, 255, 255, 0.25);
-  box-sizing: content-box;
-}
-
-eye-con > img {
-  display: block;
-  height:40px;
-  margin-left: 15px;
-  width: auto;
-}
-
-.iconTitle {
-  white-space: nowrap;
-  display: block;
-  font-size: 9pt;
-  margin-top: 3px;
-  color: #fff;
+  user-select: none;
 }
 
 #windows {
